--- a/pysogs/sogs.ini
+++ b/pysogs/sogs.ini
@@ -28,7 +28,7 @@ key_file = key_x25519
 ; requests to pysogs.  Using HTTPS is possible but not particularly recommended: onion requests are
 ; already encrypted and so the extra layer of HTTPS encryption does not make requests more secure.
 ;
-base_url = http://62.235.106.53:8000
+base_url = http://<public_ip>:8000
 
 
 ; Listening address for oxenmq requests. The socket uses curve encryption using the same x25519 key
