--- a/pysogs/Dockerfile
+++ b/pysogs/Dockerfile
@@ -1,12 +1,6 @@
 FROM debian:bullseye-slim
 
 
-ENV TZ=Asia/Dubai
-
-COPY sogs-standalone.ini sogs-standalone.ini
-COPY run.sh run.sh
-RUN chmod +x run.sh
-
 RUN apt update && apt -y upgrade
 
 RUN apt -y install curl lsb-release apt-utils nano tzdata dialog sqlite3
@@ -19,6 +13,15 @@ RUN curl -so /etc/apt/trusted.gpg.d/oxen.gpg https://deb.oxen.io/pub.gpg
 RUN echo "deb https://deb.oxen.io $(lsb_release -sc) main" | tee /etc/apt/sources.list.d/oxen.list
 # Update package lists:
 RUN apt -y update
+
+RUN addgroup uwsgi
+RUN useradd -G uwsgi uwsgi
+
+
+COPY --chown:uwsgi run.sh run.sh
+RUN chmod +x run.sh
+
+
 
 
 ENTRYPOINT bash
