--- a/pysogs/sogs.ini
+++ b/pysogs/sogs.ini
@@ -10,14 +10,14 @@
 ; PostgreSQL is also supported; see the SQLAlchemy docs for the required connect string format.
 
 
-url = sqlite:///sogs.db
+;url = sqlite:///sogs.db
 
 
 [crypto]
 
 ; Path to the x25519 private key file; this is a 32-byte file containing the raw private key data.
 ;
-key_file = key_x25519
+;key_file = key_x25519
 
 
 [net]
