--- a/pysogs/sogs.ini
+++ b/pysogs/sogs.ini
@@ -28,7 +28,7 @@
 ; requests to pysogs.  Using HTTPS is possible but not particularly recommended: onion requests are
 ; already encrypted and so the extra layer of HTTPS encryption does not make requests more secure.
 ;
-base_url = http://<public_ip>:8000
+base_url = http://<public-url>:8000
 
 
 ; Listening address for oxenmq requests. The socket uses curve encryption using the same x25519 key
@@ -48,13 +48,13 @@ base_url = http://<public_ip>:8000
 ; Whether we should show an index of public rooms on the root URL when visited by a
 ; browser.
 ;
-;http_show_index = yes
+http_show_index = no
 
 
 ; Whether we should show recent messages for public rooms on the sogs room page when visited by a
 ; browser.
 ;
-;http_show_recent = yes
+http_show_recent = no
 
 
 [files]
