--- a/pysogs/Dockerfile
+++ b/pysogs/Dockerfile
@@ -1,14 +1,12 @@
 FROM debian:bullseye-slim
 
+ARG PUBLICIP
+ARG SESSIONID
 ENV DEBIAN_FRONTEND=noninteractive
 
-
 RUN apt update && apt -y upgrade
-
-RUN apt -y install curl lsb-release apt-utils nano ucf python3-pip
+RUN apt -y install curl lsb-release apt-utils nano ucf python3-pip crudini
 RUN apt-get -y install systemctl
-
-RUN apt update
 
 RUN curl -so /etc/apt/trusted.gpg.d/oxen.gpg https://deb.oxen.io/pub.gpg
 # Add the Oxen apt repository to your package configuration:
@@ -27,9 +25,17 @@ RUN chmod a+rw /var/lib/session-open-group-server/sogs.db
 
 COPY sogs.ini /etc/sogs/sogs.ini
 COPY uwsgi.ini .
+COPY auth.py .
+COPY blink_session_id.py .
+
+RUN crudini --set --existing /etc/sogs/sogs.ini net base_url $PUBLICIP
 
 RUN sogs --add-room fishing --name "Fish Talk" --description "Three fish, four fish, yellow fish, green fish"
-RUN sogs --rooms + --add-moderators SESSIONID --admin --hidden
+RUN sogs --rooms + --add-moderators $SESSIONID --admin --hidden
+
 
 ENTRYPOINT uwsgi --ini uwsgi.ini
+
+
+
 
