add api request
response from api is empty, headers is ok

--- a/pysogs/Dockerfile
+++ b/pysogs/Dockerfile
@@ -26,13 +26,14 @@ RUN chmod a+rw /var/lib/session-open-group-server/sogs.db
 COPY sogs.ini /etc/sogs/sogs.ini
 COPY uwsgi.ini .
 COPY auth.py .
-COPY blink_session_id.py .
 
 RUN crudini --set --existing /etc/sogs/sogs.ini net base_url $PUBLICIP
 
 RUN sogs --add-room fishing --name "Fish Talk" --description "Three fish, four fish, yellow fish, green fish"
 RUN sogs --rooms + --add-moderators $SESSIONID --admin --hidden
 
+# RUN python3 auth.py -s <session_id> -N -t 0 -b -k <public_server_key> -m GET -p /inbox -S http://0.0.0.0:8000
+# => Empty response
 
 ENTRYPOINT uwsgi --ini uwsgi.ini
 
