--- a/pysogs/sogs.ini
+++ b/pysogs/sogs.ini
@@ -28,7 +28,7 @@
 ; requests to pysogs.  Using HTTPS is possible but not particularly recommended: onion requests are
 ; already encrypted and so the extra layer of HTTPS encryption does not make requests more secure.
 ;
-base_url = http://<public-url>:8000
+base_url = 0
 
 
 ; Listening address for oxenmq requests. The socket uses curve encryption using the same x25519 key
